--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cheerio": "1.0.0-rc.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.0.8",
     "geist": "^1.2.1",
     "lucide-react": "^0.316.0",
     "next": "14.1.0",
