--- a/package.json
+++ b/package.json
@@ -1,49 +1,60 @@
 {
-  "name": "collaborators",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^3.3.4",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-navigation-menu": "^1.1.4",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-switch": "^1.0.3",
-    "@studio-freight/react-lenis": "^0.0.45",
-    "cheerio": "1.0.0-rc.12",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "framer-motion": "^11.0.8",
-    "geist": "^1.2.1",
-    "gsap": "^3.12.5",
-    "lucide-react": "^0.316.0",
-    "next": "14.1.0",
-    "next-themes": "^0.2.1",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.49.3",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0",
-    "fluid-tailwind": "^0.1.6",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
-  }
+	"name": "collaborators",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"introspect": "drizzle-kit introspect:pg",
+		"generate": "drizzle-kit generate:pg",
+		"migrate": "tsx src/db/migrate.ts",
+		"drop": "drizzle-kit drop --out=./src/drizzle"
+	},
+	"dependencies": {
+		"@hookform/resolvers": "^3.3.4",
+		"@radix-ui/react-checkbox": "^1.0.4",
+		"@radix-ui/react-dialog": "^1.0.5",
+		"@radix-ui/react-dropdown-menu": "^2.0.6",
+		"@radix-ui/react-label": "^2.0.2",
+		"@radix-ui/react-navigation-menu": "^1.1.4",
+		"@radix-ui/react-slot": "^1.0.2",
+		"@radix-ui/react-switch": "^1.0.3",
+		"@studio-freight/react-lenis": "^0.0.45",
+		"cheerio": "1.0.0-rc.12",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.0",
+		"dotenv": "^16.4.5",
+		"drizzle-orm": "^0.30.3",
+		"framer-motion": "^11.0.8",
+		"geist": "^1.2.1",
+		"gsap": "^3.12.5",
+		"lucide-react": "^0.316.0",
+		"next": "14.1.0",
+		"next-themes": "^0.2.1",
+		"pg": "^8.11.3",
+		"postgres": "^3.4.3",
+		"react": "^18",
+		"react-dom": "^18",
+		"react-hook-form": "^7.49.3",
+		"tailwind-merge": "^2.2.1",
+		"tailwindcss-animate": "^1.0.7",
+		"tsx": "^4.7.1",
+		"zod": "^3.22.4"
+	},
+	"devDependencies": {
+		"@types/node": "^20",
+		"@types/pg": "^8.11.2",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"autoprefixer": "^10.0.1",
+		"drizzle-kit": "^0.20.14",
+		"eslint": "^8",
+		"eslint-config-next": "14.1.0",
+		"fluid-tailwind": "^0.1.6",
+		"postcss": "^8",
+		"tailwindcss": "^3.3.0",
+		"typescript": "^5"
+	}
 }
