--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
 		"@radix-ui/react-slot": "^1.0.2",
 		"@radix-ui/react-switch": "^1.0.3",
 		"@studio-freight/react-lenis": "^0.0.45",
+		"@tanstack/react-query": "^5.28.4",
+		"axios": "^1.6.8",
+		"bcrypt": "^5.1.1",
 		"cheerio": "1.0.0-rc.12",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
@@ -44,6 +47,7 @@
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
+		"@tanstack/eslint-plugin-query": "^5.27.7",
 		"@types/node": "^20",
 		"@types/pg": "^8.11.2",
 		"@types/react": "^18",
