--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
 		"drop": "drizzle-kit drop --out=./src/drizzle"
 	},
 	"dependencies": {
+		"@auth/drizzle-adapter": "^0.8.2",
 		"@hookform/resolvers": "^3.3.4",
+		"@lucia-auth/adapter-drizzle": "^1.0.7",
+		"@nextui-org/react": "^2.2.10",
+		"@node-rs/argon2": "^1.8.0",
+		"@node-rs/bcrypt": "^1.10.1",
 		"@radix-ui/react-checkbox": "^1.0.4",
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -23,24 +28,30 @@
 		"@radix-ui/react-switch": "^1.0.3",
 		"@studio-freight/react-lenis": "^0.0.45",
 		"@tanstack/react-query": "^5.28.4",
+		"arctic": "^1.5.0",
 		"axios": "^1.6.8",
 		"bcrypt": "^5.1.1",
 		"cheerio": "1.0.0-rc.12",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
 		"dotenv": "^16.4.5",
-		"drizzle-orm": "^0.30.3",
+		"drizzle-orm": "^0.30.7",
 		"framer-motion": "^11.0.8",
 		"geist": "^1.2.1",
 		"gsap": "^3.12.5",
+		"input-otp": "^1.2.4",
+		"lucia": "^3.1.1",
 		"lucide-react": "^0.316.0",
 		"next": "14.1.0",
 		"next-themes": "^0.2.1",
+		"nodemailer": "^6.9.13",
+		"oslo": "^1.2.0",
 		"pg": "^8.11.3",
-		"postgres": "^3.4.3",
+		"postgres": "^3.4.4",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-hook-form": "^7.49.3",
+		"sonner": "^1.4.41",
 		"tailwind-merge": "^2.2.1",
 		"tailwindcss-animate": "^1.0.7",
 		"tsx": "^4.7.1",
@@ -48,6 +59,7 @@
 	},
 	"devDependencies": {
 		"@tanstack/eslint-plugin-query": "^5.27.7",
+		"@types/bcrypt": "^5.0.2",
 		"@types/node": "^20",
 		"@types/pg": "^8.11.2",
 		"@types/react": "^18",
