--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev",
+		"dev": "next dev -p 8080",
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
@@ -16,9 +16,11 @@
 		"@auth/drizzle-adapter": "^0.8.2",
 		"@hookform/resolvers": "^3.3.4",
 		"@lucia-auth/adapter-drizzle": "^1.0.7",
+		"@nextui-org/avatar": "^2.0.33",
 		"@nextui-org/react": "^2.2.10",
 		"@node-rs/argon2": "^1.8.0",
 		"@node-rs/bcrypt": "^1.10.1",
+		"@radix-ui/react-avatar": "^1.1.0",
 		"@radix-ui/react-checkbox": "^1.0.4",
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-dropdown-menu": "^2.0.6",
