--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
 		"introspect": "drizzle-kit introspect:pg",
 		"generate": "drizzle-kit generate:pg",
 		"migrate": "tsx src/db/migrate.ts",
-		"drop": "drizzle-kit drop --out=./src/drizzle"
+		"drop": "drizzle-kit drop --out=./src/drizzle",
+		"email": "email dev",
+		"test": "vitest"
 	},
 	"dependencies": {
 		"@auth/drizzle-adapter": "^0.8.2",
@@ -28,8 +30,10 @@
 		"@radix-ui/react-navigation-menu": "^1.1.4",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@radix-ui/react-switch": "^1.0.3",
+		"@react-email/components": "0.0.28",
 		"@studio-freight/react-lenis": "^0.0.45",
-		"@tanstack/react-query": "^5.28.4",
+		"@tanstack/react-query": "^5.29.0",
+		"@vitejs/plugin-react": "^4.3.3",
 		"arctic": "^1.5.0",
 		"axios": "^1.6.8",
 		"bcrypt": "^5.1.1",
@@ -38,8 +42,8 @@
 		"clsx": "^2.1.0",
 		"dotenv": "^16.4.5",
 		"drizzle-orm": "^0.30.7",
-		"framer-motion": "^11.0.8",
-		"geist": "^1.2.1",
+		"framer-motion": "^11.0.25",
+		"geist": "^1.3.0",
 		"gsap": "^3.12.5",
 		"input-otp": "^1.2.4",
 		"lucia": "^3.1.1",
@@ -48,31 +52,37 @@
 		"next-themes": "^0.2.1",
 		"nodemailer": "^6.9.13",
 		"oslo": "^1.2.0",
-		"pg": "^8.11.3",
+		"pg": "^8.11.5",
 		"postgres": "^3.4.4",
-		"react": "^18",
-		"react-dom": "^18",
-		"react-hook-form": "^7.49.3",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.51.2",
 		"sonner": "^1.4.41",
-		"tailwind-merge": "^2.2.1",
+		"tailwind-merge": "^2.2.2",
 		"tailwindcss-animate": "^1.0.7",
-		"tsx": "^4.7.1",
+		"tsx": "^4.7.2",
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
-		"@tanstack/eslint-plugin-query": "^5.27.7",
+		"@tanstack/eslint-plugin-query": "^5.28.11",
+		"@testing-library/react": "^16.0.1",
 		"@types/bcrypt": "^5.0.2",
-		"@types/node": "^20",
-		"@types/pg": "^8.11.2",
-		"@types/react": "^18",
-		"@types/react-dom": "^18",
-		"autoprefixer": "^10.0.1",
+		"@types/node": "^20.12.5",
+		"@types/nodemailer": "^6.4.17",
+		"@types/pg": "^8.11.4",
+		"@types/react": "^18.2.74",
+		"@types/react-dom": "^18.2.24",
+		"@vitest/ui": "^2.1.5",
+		"autoprefixer": "^10.4.19",
 		"drizzle-kit": "^0.20.14",
-		"eslint": "^8",
+		"eslint": "^8.57.0",
 		"eslint-config-next": "14.1.0",
 		"fluid-tailwind": "^0.1.6",
-		"postcss": "^8",
-		"tailwindcss": "^3.3.0",
-		"typescript": "^5"
+		"jsdom": "^25.0.1",
+		"postcss": "^8.4.38",
+		"react-email": "3.0.2",
+		"tailwindcss": "^3.4.3",
+		"typescript": "^5.4.4",
+		"vitest": "^2.1.5"
 	}
 }
