--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"lint": "next lint",
 		"introspect": "drizzle-kit introspect:pg",
 		"generate": "drizzle-kit generate:pg",
-		"migrate": "tsx src/db/migrate.ts",
+		"migrate": "tsx src/data/migrate.ts",
 		"drop": "drizzle-kit drop --out=./src/drizzle",
 		"email": "email dev",
 		"test": "vitest"
@@ -34,6 +34,7 @@
 		"@react-email/components": "0.0.28",
 		"@studio-freight/react-lenis": "^0.0.45",
 		"@tanstack/react-query": "^5.29.0",
+		"@testing-library/react-hooks": "^8.0.1",
 		"@vitejs/plugin-react": "^4.3.3",
 		"arctic": "^1.5.0",
 		"axios": "^1.6.8",
