--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
 	},
 	"dependencies": {
 		"@auth/drizzle-adapter": "^0.8.2",
+		"@heroui/react": "^2.6.14",
+		"@heroui/system": "^2.4.7",
+		"@heroui/theme": "^2.4.6",
 		"@hookform/resolvers": "^3.3.4",
 		"@lucia-auth/adapter-drizzle": "^1.0.7",
 		"@nextui-org/avatar": "^2.0.33",
 		"@nextui-org/image": "^2.0.32",
-		"@nextui-org/react": "^2.2.10",
 		"@node-rs/argon2": "^1.8.0",
 		"@node-rs/bcrypt": "^1.10.1",
 		"@radix-ui/react-avatar": "^1.1.0",
@@ -44,35 +46,37 @@
 		"clsx": "^2.1.0",
 		"dotenv": "^16.4.5",
 		"drizzle-orm": "^0.30.7",
-		"framer-motion": "^11.0.25",
+		"framer-motion": "^11.18.2",
 		"geist": "^1.3.0",
 		"gsap": "^3.12.5",
 		"input-otp": "^1.2.4",
 		"lucia": "^3.1.1",
-		"lucide-react": "^0.316.0",
+		"lucide-react": "^0.473.0",
 		"next": "14.1.0",
 		"next-themes": "^0.2.1",
 		"nodemailer": "^6.9.13",
 		"oslo": "^1.2.0",
 		"pg": "^8.11.5",
 		"postgres": "^3.4.4",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.51.2",
 		"sonner": "^1.4.41",
 		"tailwind-merge": "^2.2.2",
 		"tailwindcss-animate": "^1.0.7",
 		"tsx": "^4.7.2",
-		"zod": "^3.22.4"
+		"winston": "^3.17.0",
+		"zod": "^3.22.4",
+		"zustand": "^5.0.3"
 	},
 	"devDependencies": {
 		"@tanstack/eslint-plugin-query": "^5.28.11",
-		"@testing-library/react": "^16.0.1",
+		"@testing-library/react": "^16.2.0",
 		"@types/bcrypt": "^5.0.2",
 		"@types/node": "^20.12.5",
 		"@types/nodemailer": "^6.4.17",
 		"@types/pg": "^8.11.4",
-		"@types/react": "^18.2.74",
+		"@types/react": "^18.3.18",
 		"@types/react-dom": "^18.2.24",
 		"@vitest/ui": "^2.1.5",
 		"autoprefixer": "^10.4.19",
