--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
 		"@radix-ui/react-dropdown-menu": "^2.0.6",
 		"@radix-ui/react-label": "^2.0.2",
 		"@radix-ui/react-navigation-menu": "^1.1.4",
+		"@radix-ui/react-popover": "^1.1.5",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@radix-ui/react-switch": "^1.0.3",
 		"@react-email/components": "0.0.28",
 		"@studio-freight/react-lenis": "^0.0.45",
-		"@tanstack/react-query": "^5.29.0",
+		"@tanstack/react-query": "^5.64.2",
 		"@testing-library/react-hooks": "^8.0.1",
 		"@vitejs/plugin-react": "^4.3.3",
 		"arctic": "^1.5.0",
@@ -44,6 +45,7 @@
 		"cheerio": "1.0.0-rc.12",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
+		"cmdk": "1.0.0",
 		"dotenv": "^16.4.5",
 		"drizzle-orm": "^0.30.7",
 		"framer-motion": "^11.18.2",
