--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"introspect": "drizzle-kit introspect:pg",
-		"generate": "drizzle-kit generate:pg",
+		"introspect": "drizzle-kit introspect",
+		"generate": "drizzle-kit generate",
 		"migrate": "tsx src/data/migrate.ts",
 		"drop": "drizzle-kit drop --out=./src/drizzle",
+		"studio": "drizzle-kit studio --verbose",
 		"email": "email dev",
 		"test": "vitest"
 	},
@@ -47,7 +48,6 @@
 		"clsx": "^2.1.0",
 		"cmdk": "1.0.0",
 		"dotenv": "^16.4.5",
-		"drizzle-orm": "^0.30.7",
 		"framer-motion": "^11.18.2",
 		"geist": "^1.3.0",
 		"gsap": "^3.12.5",
@@ -82,7 +82,8 @@
 		"@types/react-dom": "^18.2.24",
 		"@vitest/ui": "^2.1.5",
 		"autoprefixer": "^10.4.19",
-		"drizzle-kit": "^0.20.14",
+		"drizzle-kit": "^0.30.2",
+		"drizzle-orm": "^0.38.4",
 		"eslint": "^8.57.0",
 		"eslint-config-next": "14.1.0",
 		"fluid-tailwind": "^0.1.6",
