--- a/package.json
+++ b/package.json
@@ -16,82 +16,77 @@
 		"test": "vitest"
 	},
 	"dependencies": {
-		"@auth/drizzle-adapter": "^0.8.2",
+		"@auth/drizzle-adapter": "^1.7.4",
 		"@heroui/react": "^2.6.14",
 		"@heroui/system": "^2.4.7",
 		"@heroui/theme": "^2.4.6",
-		"@hookform/resolvers": "^3.3.4",
-		"@lucia-auth/adapter-drizzle": "^1.0.7",
-		"@nextui-org/avatar": "^2.0.33",
-		"@nextui-org/image": "^2.0.32",
-		"@node-rs/argon2": "^1.8.0",
-		"@node-rs/bcrypt": "^1.10.1",
-		"@radix-ui/react-avatar": "^1.1.0",
-		"@radix-ui/react-checkbox": "^1.0.4",
-		"@radix-ui/react-dialog": "^1.0.5",
-		"@radix-ui/react-dropdown-menu": "^2.0.6",
-		"@radix-ui/react-label": "^2.0.2",
-		"@radix-ui/react-navigation-menu": "^1.1.4",
-		"@radix-ui/react-popover": "^1.1.5",
-		"@radix-ui/react-slot": "^1.0.2",
-		"@radix-ui/react-switch": "^1.0.3",
-		"@react-email/components": "0.0.28",
-		"@studio-freight/react-lenis": "^0.0.45",
-		"@tanstack/react-query": "^5.64.2",
-		"@testing-library/react-hooks": "^8.0.1",
-		"@vitejs/plugin-react": "^4.3.3",
-		"arctic": "^1.5.0",
-		"axios": "^1.6.8",
-		"bcrypt": "^5.1.1",
-		"cheerio": "1.0.0-rc.12",
-		"class-variance-authority": "^0.7.0",
-		"clsx": "^2.1.0",
-		"cmdk": "1.0.0",
-		"dotenv": "^16.4.5",
-		"framer-motion": "^11.18.2",
-		"geist": "^1.3.0",
-		"gsap": "^3.12.5",
-		"input-otp": "^1.2.4",
-		"lucia": "^3.1.1",
-		"lucide-react": "^0.473.0",
-		"next": "14.1.0",
-		"next-themes": "^0.2.1",
-		"nodemailer": "^6.9.13",
-		"oslo": "^1.2.0",
-		"pg": "^8.11.5",
-		"postgres": "^3.4.4",
-		"react": "^18.3.1",
-		"react-dom": "^18.3.1",
-		"react-hook-form": "^7.51.2",
-		"sonner": "^1.4.41",
-		"tailwind-merge": "^2.2.2",
+		"@hookform/resolvers": "^4.0.0",
+		"@node-rs/argon2": "^2.0.2",
+		"@node-rs/bcrypt": "^1.10.7",
+		"@radix-ui/react-avatar": "^1.1.3",
+		"@radix-ui/react-checkbox": "^1.1.4",
+		"@radix-ui/react-dialog": "^1.1.6",
+		"@radix-ui/react-dropdown-menu": "^2.1.6",
+		"@radix-ui/react-label": "^2.1.2",
+		"@radix-ui/react-navigation-menu": "^1.2.5",
+		"@radix-ui/react-popover": "^1.1.6",
+		"@radix-ui/react-slot": "^1.1.2",
+		"@radix-ui/react-switch": "^1.1.3",
+		"@react-email/components": "0.0.33",
+		"@tanstack/react-query": "^5.66.0",
+		"@vitejs/plugin-react": "^4.3.4",
+		"axios": "^1.7.9",
+		"better-auth": "^1.1.17",
+		"cheerio": "1.0.0",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"cmdk": "1.0.4",
+		"dotenv": "^16.4.7",
+		"framer-motion": "^12.4.2",
+		"geist": "^1.3.1",
+		"gsap": "^3.12.7",
+		"input-otp": "^1.4.2",
+		"lenis": "^1.1.20",
+		"lucide-react": "^0.475.0",
+		"next": "15.1.7",
+		"next-themes": "^0.4.4",
+		"nodemailer": "^6.10.0",
+		"pg": "^8.13.1",
+		"postgres": "^3.4.5",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"react-hook-form": "^7.54.2",
+		"sonner": "^1.7.4",
+		"tailwind-merge": "^3.0.1",
 		"tailwindcss-animate": "^1.0.7",
-		"tsx": "^4.7.2",
+		"tsx": "^4.19.2",
 		"winston": "^3.17.0",
-		"zod": "^3.22.4",
+		"zod": "^3.24.1",
 		"zustand": "^5.0.3"
 	},
 	"devDependencies": {
-		"@tanstack/eslint-plugin-query": "^5.28.11",
+		"@tanstack/eslint-plugin-query": "^5.66.1",
 		"@testing-library/react": "^16.2.0",
-		"@types/bcrypt": "^5.0.2",
-		"@types/node": "^20.12.5",
+		"@types/node": "^22.13.1",
 		"@types/nodemailer": "^6.4.17",
-		"@types/pg": "^8.11.4",
-		"@types/react": "^18.3.18",
-		"@types/react-dom": "^18.2.24",
-		"@vitest/ui": "^2.1.5",
-		"autoprefixer": "^10.4.19",
-		"drizzle-kit": "^0.30.2",
-		"drizzle-orm": "^0.38.4",
-		"eslint": "^8.57.0",
-		"eslint-config-next": "14.1.0",
-		"fluid-tailwind": "^0.1.6",
-		"jsdom": "^25.0.1",
-		"postcss": "^8.4.38",
-		"react-email": "3.0.2",
-		"tailwindcss": "^3.4.3",
-		"typescript": "^5.4.4",
-		"vitest": "^2.1.5"
+		"@types/pg": "^8.11.11",
+		"@types/react": "^19.0.8",
+		"@types/react-dom": "^19.0.3",
+		"@vitest/ui": "^3.0.5",
+		"autoprefixer": "^10.4.20",
+		"depcheck": "^1.4.7",
+		"drizzle-kit": "^0.30.4",
+		"drizzle-orm": "^0.39.3",
+		"eslint": "^9.20.0",
+		"eslint-config-next": "15.1.7",
+		"fluid-tailwind": "^1.0.4",
+		"jsdom": "^26.0.0",
+		"postcss": "^8.5.2",
+		"prettier": "^3.5.0",
+		"prettier-plugin-tailwindcss": "^0.6.11",
+		"react-email": "3.0.7",
+		"tailwindcss": "^3.4.17",
+		"typescript": "^5.7.3",
+		"vitest": "^3.0.5"
 	}
 }
