--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"migrate": "tsx src/data/migrate.ts",
 		"drop": "drizzle-kit drop --out=./src/drizzle",
 		"studio": "drizzle-kit studio --verbose",
-		"email": "email dev",
+		"email": "email dev --dir src/emails",
 		"test": "vitest"
 	},
 	"dependencies": {
@@ -56,6 +56,7 @@
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.54.2",
+		"resend": "^4.1.2",
 		"sonner": "^1.7.4",
 		"tailwind-merge": "^3.0.1",
 		"tailwindcss-animate": "^1.0.7",
