--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"nodemailer": "^6.10.0",
 		"pg": "^8.13.1",
 		"postgres": "^3.4.5",
+		"puppeteer": "^24.2.1",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.54.2",
