--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"@radix-ui/react-popover": "^1.1.6",
 		"@radix-ui/react-slot": "^1.1.2",
 		"@radix-ui/react-switch": "^1.1.3",
+		"@radix-ui/react-tabs": "^1.1.3",
 		"@react-email/components": "0.0.33",
 		"@tanstack/react-query": "^5.66.0",
 		"@vitejs/plugin-react": "^4.3.4",
@@ -42,12 +43,12 @@
 		"clsx": "^2.1.1",
 		"cmdk": "1.0.4",
 		"dotenv": "^16.4.7",
-		"framer-motion": "^12.4.2",
 		"geist": "^1.3.1",
 		"gsap": "^3.12.7",
 		"input-otp": "^1.4.2",
 		"lenis": "^1.1.20",
 		"lucide-react": "^0.475.0",
+		"motion": "^12.4.7",
 		"next": "15.1.7",
 		"next-themes": "^0.4.4",
 		"nodemailer": "^6.10.0",
