--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	},
 	"dependencies": {
 		"@auth/drizzle-adapter": "^1.7.4",
+		"@google/generative-ai": "^0.22.0",
 		"@heroui/react": "^2.6.14",
 		"@heroui/system": "^2.4.7",
 		"@heroui/theme": "^2.4.6",
@@ -35,6 +36,7 @@
 		"@radix-ui/react-tabs": "^1.1.3",
 		"@react-email/components": "0.0.33",
 		"@tanstack/react-query": "^5.66.0",
+		"@uploadthing/react": "^7.3.0",
 		"@vitejs/plugin-react": "^4.3.4",
 		"axios": "^1.7.9",
 		"better-auth": "^1.1.17",
@@ -63,6 +65,7 @@
 		"tailwind-merge": "^3.0.1",
 		"tailwindcss-animate": "^1.0.7",
 		"tsx": "^4.19.2",
+		"uploadthing": "^7.5.2",
 		"winston": "^3.17.0",
 		"zod": "^3.24.1",
 		"zustand": "^5.0.3"
