feat(resources, db): improve resource filtering, pagination, and database schema
- Enhanced resource filtering with category, tags, and search functionality
- Updated database schema with cascade delete for related tables
- Refactored resource service to support more flexible querying
- Modified package.json scripts with db-specific prefixes
- Updated UI components to support new filtering and sorting options

--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"introspect": "drizzle-kit introspect",
-		"generate": "drizzle-kit generate",
-		"migrate": "tsx src/data/migrate.ts",
-		"drop": "drizzle-kit drop --out=./src/drizzle",
-		"studio": "drizzle-kit studio --verbose",
+		"db:introspect": "drizzle-kit introspect",
+		"db:generate": "drizzle-kit generate",
+		"db:migrate": "tsx src/data/migrate.ts",
+		"db:drop": "drizzle-kit drop --out=./src/drizzle",
+		"db:studio": "drizzle-kit studio --verbose",
 		"email": "email dev --dir src/emails",
 		"test": "vitest"
 	},
