--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"db:migrate": "tsx src/data/migrate.ts",
 		"db:drop": "drizzle-kit drop --out=./src/drizzle",
 		"db:studio": "drizzle-kit studio --verbose",
+		"setup:pinecone": "tsx src/services/vector/setup.ts",
 		"email": "email dev --dir src/emails",
 		"test": "vitest"
 	},
@@ -24,6 +25,7 @@
 		"@hookform/resolvers": "^4.0.0",
 		"@node-rs/argon2": "^2.0.2",
 		"@node-rs/bcrypt": "^1.10.7",
+		"@pinecone-database/pinecone": "^5.1.1",
 		"@radix-ui/react-avatar": "^1.1.3",
 		"@radix-ui/react-checkbox": "^1.1.4",
 		"@radix-ui/react-dialog": "^1.1.6",
@@ -45,6 +47,7 @@
 		"clsx": "^2.1.1",
 		"cmdk": "1.0.4",
 		"dotenv": "^16.4.7",
+		"framer-motion": "^12.5.0",
 		"geist": "^1.3.1",
 		"gsap": "^3.12.7",
 		"input-otp": "^1.4.2",
@@ -60,6 +63,7 @@
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.54.2",
+		"react-markdown": "^10.1.0",
 		"resend": "^4.1.2",
 		"sonner": "^1.7.4",
 		"tailwind-merge": "^3.0.1",
