--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"lenis": "^1.1.20",
 		"lucide-react": "^0.475.0",
 		"motion": "^12.4.7",
+		"nanoid": "^5.1.5",
 		"next": "15.1.7",
 		"next-themes": "^0.4.4",
 		"nodemailer": "^6.10.0",
