--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"geist": "^1.3.1",
 		"gsap": "^3.12.7",
 		"input-otp": "^1.4.2",
+		"jwt-decode": "^4.0.0",
 		"lenis": "^1.1.20",
 		"lucide-react": "^0.475.0",
 		"motion": "^12.4.7",
