--- a/package.json
+++ b/package.json
@@ -51,12 +51,11 @@
 		"geist": "^1.3.1",
 		"gsap": "^3.12.7",
 		"input-otp": "^1.4.2",
-		"jwt-decode": "^4.0.0",
 		"lenis": "^1.1.20",
 		"lucide-react": "^0.475.0",
 		"motion": "^12.4.7",
 		"nanoid": "^5.1.5",
-		"next": "15.1.7",
+		"next": "15.3.0-canary.21",
 		"next-themes": "^0.4.4",
 		"nodemailer": "^6.10.0",
 		"pg": "^8.13.1",
