--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@heroui/system": "^2.4.7",
 		"@heroui/theme": "^2.4.6",
 		"@hookform/resolvers": "^4.0.0",
+		"@iconify/react": "^5.2.1",
 		"@node-rs/argon2": "^2.0.2",
 		"@node-rs/bcrypt": "^1.10.7",
 		"@pinecone-database/pinecone": "^5.1.1",
@@ -37,6 +38,7 @@
 		"@radix-ui/react-switch": "^1.1.3",
 		"@radix-ui/react-tabs": "^1.1.3",
 		"@react-email/components": "0.0.33",
+		"@react-stately/utils": "^3.10.6",
 		"@tanstack/react-query": "^5.66.0",
 		"@uploadthing/react": "^7.3.0",
 		"@vitejs/plugin-react": "^4.3.4",
