--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
 		"tailwind-merge": "^3.0.1",
 		"tailwindcss-animate": "^1.0.7",
 		"tsx": "^4.19.2",
+		"ua-parser-js": "^2.0.3",
 		"uploadthing": "^7.5.2",
 		"uuid": "^11.1.0",
 		"vaul": "^1.1.2",
